<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">


    <TextView
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/download_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/category_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageView
            android:id="@+id/download_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_download"
            android:contentDescription="@string/download" />

        <LinearLayout
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/download_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/download_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="1.2GB" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/download_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="75dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/download_layout"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/download_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_image_24"
            android:contentDescription="@string/images" />

        <LinearLayout
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/images"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/image_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="1.2GB" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="75dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/image_layout"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/video_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageView
            android:id="@+id/video_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_videocam_24"
            android:contentDescription="@string/videos" />

        <LinearLayout
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/video_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videos"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/video_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="1.2GB" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="75dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/video_layout"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/audio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/video_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageView
            android:id="@+id/audio_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_audiotrack_24"
            android:contentDescription="@string/audios" />

        <LinearLayout
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/audio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audios"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/audio_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="1.2GB" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/audio_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="75dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/audio_layout"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/document_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/audio_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageView
            android:id="@+id/document_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_document_24"
            android:contentDescription="@string/documents" />

        <LinearLayout
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/document_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/documents"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/document_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="1.2GB" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/document_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="75dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/document_layout"
        android:background="@color/black" />

    <TextView
        android:id="@+id/Storage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_devices"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/document_view"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/internal_storage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/Storage_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ImageView
            android:id="@+id/internal_storage_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_phone_android_24"
            android:contentDescription="@string/internal_storage" />

        <LinearLayout
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/internal_storage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal_storage"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/internal_storage_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="1.2GB Free" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/internal_storage_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="75dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/internal_storage_layout"
        android:background="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>
